--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>VisitPlannr.io</title>
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body ng-app="visitPlannr">
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="row">
@@ -19,7 +20,15 @@
       </div>
     </nav>
 
-    <h1>Hello, Mustapha !</h1>
+    <section class="container" ng-controller="VisitListController">
+      <div class="row" ng-repeat="visit in visits">
+        <div class="col-sm-8 col-sm-offset-2" >
+          <pre>{{visit.Country}}</pre>
+        </div>
+      </div>
+    </section>
+
+    <script src="/scripts/bundle.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
