--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>VisitPlannr.io</title>
+    <h1>KATA GS TOURIST</h1>
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body ng-app="visitPlannr">
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="row">
-          <div class="col-sm-8 col-sm-offset-2">
+          <div class="col-sm-12">
             <div class="navbar-header">
               <h1>KATA GS TOURIST</h1>
             </div>
@@ -21,9 +21,31 @@
     </nav>
 
     <section class="container" ng-controller="VisitListController">
-      <div class="row" ng-repeat="visit in visits">
-        <div class="col-sm-8 col-sm-offset-2" >
-          <pre>{{visit.Country}}</pre>
+      <div class="row">
+        <div class="col-sm-12 search">
+          <div class="input-group">
+            <input class="form-control" ng-model="search" placeholder="search" type=search>
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+        </div>
+        </div>
+      </div>
+      <div class="row" ng-repeat="visit in visits | filter:search">
+        <div class="col-sm-12">
+          <div class="row card" ng-cloak>
+            <div class="col-xs-12 location">
+              <h1 class="pull-left">{{visit.City}}</h1>
+              <div class="pull-right">{{visit.Country}}</div>
+            </div>
+            <div class="col-xs-12 attractions">
+              <ul>
+                <li ng-repeat="attraction in visit.Attractions">
+                  {{attraction}}
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
